# pallet

./: Cargo.toml
node/: Cargo.toml
node/src/: main.rs
pallets/biblioteca/: Cargo.toml
pallets/biblioteca/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
