[package]
name = "node-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
frame-support = { version = "4.0.0-dev", default-features = false }
frame-system = { version = "4.0.0-dev", default-features = false }
sp-runtime = { version = "4.0.0-dev", default-features = false }
sp-std = { version = "4.0.0-dev", default-features = false }
pallet-biblioteca = { path = "../pallets/biblioteca" }

[lib]
name = "node_runtime"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "pallet-biblioteca/std"
]
